--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "optionjs",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "ignore": [
     "test",
     ".gitignore",
-    "Grunfile.js",
+    "Gruntfile.js",
     "karma.conf.js",
     "package.json",
     "git_hooks"
