--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/gghez/optionjs.git"
   },
-  "dependencies": {
+  "devDependencies": {
     "load-grunt-tasks": "^0.6.0",
     "grunt-available-tasks": "^0.5.0",
     "grunt": "^0.4.5",
