--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma-sinon": "^1.0.3",
     "karma": "^0.12.24",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-story-reporter": "^0.2.2",
     "grunt-karma": "^0.9.0",
     "grunt-bower-task": "^0.4.0",
     "grunt-publish": "0.0.5"
