--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "grunt-publish": "0.0.5"
   },
   "scripts": {
-    "postinstall": "grunt install",
-    "test": "grunt test"
+    "postinstall": "grunt install"
   },
   "files": [
     "src/**/*.js"
