--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "grunt-publish": "0.0.5"
   },
   "scripts": {
-    "postinstall": "grunt install"
+    "postinstall": "grunt bower:install && grunt copy:hooks"
   },
   "files": [
     "src/**/*.js"
