Deployment structure changed.

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "git_hooks"
   ],
   "main": [
-    "src/**/*.js"
+    "dist/**/*.js"
   ],
   "keywords": "option init parameter",
   "license": "MIT",
