--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-bump": "0.0.13",
     "grunt-contrib-jshint": "~0.4.0",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-concurrent": "^1.0.0",
     "karma-mocha": "^0.1.9",
