--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "karma-story-reporter": "^0.2.2",
     "grunt-karma": "^0.9.0",
     "grunt-bower-task": "^0.4.0",
-    "grunt-publish": "0.0.5"
+    "grunt-publish": "0.0.5",
+    "grunt-mocha-cli": "~1.9.0"
   },
   "scripts": {
     "postinstall": "grunt bower:install && grunt copy:hooks",
