--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optionjs",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "Option manager for any JS application.",
   "license": "MIT",
   "homepage": "http://github.com/gghez/optionjs",
@@ -37,7 +37,7 @@
     "test": "grunt test"
   },
   "files": [
-    "dist/**/*.js"
+    "src/**/*.js"
   ],
-  "main": "dist/optionjs.js"
+  "main": "src/option.js"
 }
