--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optionjs",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Option manager for any JS application.",
   "license": "MIT",
   "homepage": "http://github.com/gghez/optionjs",
@@ -33,7 +33,7 @@
     "grunt-mocha-cli": "~1.9.0"
   },
   "scripts": {
-    "postinstall": "grunt bower:install && grunt copy:hooks && grunt compile",
+    "postinstall": "grunt bower:install && grunt compile",
     "test": "grunt test"
   },
   "files": [
